--- a/mod-sol-1/styles/mystyles.css
+++ b/mod-sol-1/styles/mystyles.css
@@ -5,28 +5,28 @@
  }
 
 .needEntries {
-  background-color: #ffcc66;
+#  background-color: #ffcc66;
   color : #ffaa00;
   border-color : #ff0000 #ff0000;
   border-style : solid;
 }
 
 .enoughEntries {
-  background-color: #cc4400;
+#  background-color: #cc4400;
   color : #bfff80;
   border-color : #008000 #008000;
   border-style : solid;
 }
 
 .tooManyEntries {
-  background-color: #ff0066;
+#  background-color: #ff0066;
   color : #008000;
   border-color : #008000 #008000;
   border-style : solid;
 }
 
 .beginstateEntries {
-    "background-color":#ffcc66;
+#    "background-color":#ffcc66;
     "color" : "blue";
     "border-color" : brown brown;
     "border-style" : dotted;
